# UO-Coursework

./: README.md
CIS 210 - Computer Science 1/: Exam_Practice.py  P11_Cricket.py  P11_Quiz.py  P12_Variations.py  P20_q6Loop.py  P21_Netpay.py  P22_SquareRoot.py  P23_Turtle.py  P31_Fizzbuzz.py  P32_ApproximatePi.py  P33_ShowMontePi.py  P34_Substrings.py  P41_testfuncts.py  P42_fixed.py  P51_calender.py  P52_paritybits.py  P62_fixed.py
CIS 210 - Computer Science 1/Labs/: Lab2.py  Lab6.py  Lab7.py
CIS 211 - Computer Science 2/CIS211-midterm-2/: q1_tree_height.py  q2_bits.py  q3_logic.py
CIS 211 - Computer Science 2/Labs/: Lab1.py  Lab2.py  Lab3.py  Lab4.py  Lab5.py  Lab7.py  Lab8.py  Other
CIS 211 - Computer Science 2/Peer Reviews/: appt.py  appt2.py  model-1.py  model-1Contagion (1).py  model-1Contagion.py  model.py
CIS 211 - Computer Science 2/S2020-211-MT1/: q1_intervals.py  q2_color_tiles.py  q3_shapes.py
CIS 212 - Computer Science 3/midterm/: q12.c  temp
CIS 313 - Intermediate Data Structures/lab0/: cpenderg_lab0.py
CIS 313 - Intermediate Data Structures/lab1/: cpenderg_lab1.py  lab1-main.py
CIS 313 - Intermediate Data Structures/lab2/: cpenderg_lab2.py  lab2-main.py
CIS 313 - Intermediate Data Structures/lab3/: BSTtest (1).py  cpenderg_lab3.py  test_main.py
CIS 313 - Intermediate Data Structures/lab4/: RBTest.py  cpenderg_lab4.py
CIS 314 - Computer Organization/finalpractice/: final  finalscratch.c
CIS 315 - Intermediate Algorithms/hw2/: hw2.py  inSmall3.txt  outputSamples.txt
CIS 315 - Intermediate Algorithms/hw5/: hw5.py  inSample.txt  inTest1.txt  (+2 more)
CIS 330 - C, C++, & UNIX/: Schoolwork - Shortcut.lnk
CIS 410 (Variable Topics) - Scientific Visualization/: README.md
CIS 410 (Variable Topics) - Scientific Visualization/final/: .astro.cxx.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README  astro  astro.cxx  cmake_install.cmake
CIS 410 (Variable Topics) - Scientific Visualization/proj1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj1
CIS 410 (Variable Topics) - Scientific Visualization/proj2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj2  proj2.cxx
CIS 410 (Variable Topics) - Scientific Visualization/proj3/: .proj3.cxx.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj3  proj3.cxx
CIS 410 (Variable Topics) - Scientific Visualization/proj3/differencer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  differencer  differencer.cxx
CIS 410 (Variable Topics) - Scientific Visualization/proj5/: .proj5.cxx.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj5  proj5.cxx
CIS 410 (Variable Topics) - Scientific Visualization/proj8/: .proj8F (copy).cxx.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj8.tar  proj8A.cxx  proj8B.cxx  proj8C.cxx  proj8D.cxx  proj8E.cxx  proj8F.cxx  proj8G  proj8G.cxx
CIS 410 (Variable Topics) - Scientific Visualization/proj8/proj7/: CMakeCache.txt  CMakeLists.txt  LUT.h  Makefile  cmake_install.cmake  proj7  proj7.cxx
CIS 415 - Operating Systems/: README.md
CIS 471 - Artificial Intelligence/: README.md
MATH 345M/: Copy_of_Math345_LAB_W3.ipynb  Math 345M Final Project.ipynb  Math 345M Homework 1.ipynb  Math 345M Homework 2.ipynb  Math 345M Homework 5.ipynb  Math 345M Homework 8.ipynb  Math 345M Midterm Exam.ipynb  Math_345_Lab_1 (1).ipynb  international_sports_cars_in_production_2020 - Sheet1.csv  potatoes.csv
MATH 345M - Statistics for Data Science/: Copy_of_MATH345_LAB_W9_Empty.ipynb  Math345_LAB_W8.ipynb
MATH 351 - Elementary Numerical Analysis 1/: FINAL_EXAM.nb  Lab3.nb  Lab4.nb  Lab5.nb  Lab6.nb  Lab7.nb  Lab8.nb  Midterm_Practice.nb  chebyshev.nb  chebyshevFinalDraft.nb  homework1.nb  homework2.nb  homework3.nb  homework4.nb  homework5.nb  homework6.nb  homework7.nb  homework8.nb
(+508 files in other folders)
